--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=server
 
+# MySQL ??
 spring.datasource.url=jdbc:mysql://localhost:3306/your-database-name
 spring.datasource.username=your-username
 spring.datasource.password=your-password
