--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.5.6'
+	id 'org.springframework.boot' version '3.2.5'
 	id 'io.spring.dependency-management' version '1.1.7'
 }
 
@@ -51,22 +51,18 @@ dependencies {
 //    implementation 'javax.xml.bind:jaxb-api:2.3.1'//xml문서와 java객체 간 매핑 자동화
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
 
-
-    implementation 'software.amazon.awssdk:s3:2.20.108' // 💡 예시 버전
-    implementation 'software.amazon.awssdk:s3-transfer-manager:2.20.108'
-
     implementation 'com.googlecode.json-simple:json-simple:1.1.1'
 
-
-
-    implementation 'software.amazon.awssdk:s3:2.20.108' // 💡 예시 버전
+	// AWS 설정
+    implementation 'software.amazon.awssdk:s3:2.20.108'
     implementation 'software.amazon.awssdk:s3-transfer-manager:2.20.108'
-
-
 
     // 알람 firebase
     implementation 'com.google.firebase:firebase-admin:9.2.0'
     implementation 'com.google.auth:google-auth-library-oauth2-http:1.19.0'
+
+	// swagger
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
 
 }
 
